--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  background-color: #fafafa;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app_header{
+  position: sticky;
+  top:0;
+  z-index: 1;
+  background-color: white;
+  padding: 10px;
+  height: 65px;
+  border-bottom : 1px solid lightgrey;
+  object-fit: contain;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+}
+
+.app_headerImage{
+  object-fit: contain;
+  height: 52px;
+}
+
+.app_posts{
+  padding: 22px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.app_stories{
+  padding: 10px;
+  padding-left: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.or_display{
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
 }
