--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,15 @@
   justify-content: space-between;
 }
 
+.navtoggle{
+  padding: "10px"
+}
+
 .app_headerImage{
   object-fit: contain;
   height: 52px;
+  margin-bottom: 10px;
+  padding: 5px;
 }
 
 .app_posts{
@@ -39,3 +45,91 @@
   padding: 20px;
   text-align: center;
 }
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border: 1px solid rgb(211, 203, 203);
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #000000;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #000000;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.dark-header{
+  background-color: #323639;
+  color: rgb(211, 203, 203);
+}
+.button{
+  width:150px;
+  border: 1px solid grey;
+  border-radius:5px;
+}
+
+.darkButton{
+  color:white;
+  width:150px;
+  border: 1px solid grey;
+  border-radius:5px;
+}
+
+.darkBtn{
+  color:white;
+}
+.dark-mode{
+  background-color: #323639;
+  color: rgb(211, 203, 203);
+}
+
