--- a/src/Post.css
+++ b/src/Post.css
@@ -6,7 +6,7 @@
 }
 .post_image{
     width: 100%;
-    
+    max-height: 500px;
     object-fit: contain;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
@@ -23,7 +23,7 @@
 
 .post_text{
     font-weight: normal;
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
 }
 .post_header{
     display: flex;
